--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-builders/custom-webpack": "^16.0.1",
     "@angular/animations": "^16.2.0",
     "@angular/cdk": "^16.2.9",
     "@angular/common": "^16.2.0",
@@ -28,8 +29,8 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.6",
     "@angular-builders/jest": "^16.0.1",
+    "@angular-devkit/build-angular": "^16.2.6",
     "@angular-eslint/builder": "16.2.0",
     "@angular-eslint/eslint-plugin": "16.2.0",
     "@angular-eslint/eslint-plugin-template": "16.2.0",
@@ -41,6 +42,7 @@
     "@types/jest": "29.5.2",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
+    "brotli-webpack-plugin": "^1.1.0",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
